# PL-Kolko-i-Krzyzyk

./: CMakeLists.txt  README.md  SI.h  main.cpp  plansza.h
